[package]
name = "sentiment_analysis"
authors = ["Arthur Martelli <arthur.martellig@gmail.com>"]
description = "Sentiment analysis AI for texts"

edition = "2021"
version = "0.1.0"

license = "MIT"
repository = "https://github.com/arthurmartelli/sentiment_analysis"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
rust-bert = "0.20.0"
