[tool.poetry]
name = "sentiment_analysis"
version = "0.1.0"
description = "Sentiment analysis AI for texts"
authors = ["Arthur Martelli <arthur.martellig@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "sentiment_analysis" }]

[tool.poetry.dependencies]
python = "^3.11"
pytorch = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "sentiment_analysis.main:main"
